adding writerfragment and fixing the toolbar bug

--- a/app/src/main/res/menu/top_nav_menu.xml
+++ b/app/src/main/res/menu/top_nav_menu.xml
@@ -6,12 +6,14 @@
         android:id="@+id/search"
         android:icon="@drawable/ic_search"
         android:title="search"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/profile_pic"
         android:icon="@drawable/ic_circle"
         android:title="profile_pic"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+
+
 
 </menu>
