--- a/app/src/main/res/layout/sidebar_header.xml
+++ b/app/src/main/res/layout/sidebar_header.xml
@@ -13,7 +13,7 @@
         android:layout_width="120dp"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/profile_pic" />
+        android:src="@drawable/ic_add" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
