--- a/app/src/main/res/layout/activity_music_player_.xml
+++ b/app/src/main/res/layout/activity_music_player_.xml
@@ -35,6 +35,7 @@
         android:src="@drawable/headphone" />
 
     <SeekBar
+        android:id="@+id/seekBar_time"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
@@ -49,6 +50,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -57,6 +59,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/tvDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -67,6 +70,7 @@
     </RelativeLayout>
 
     <Button
+        android:id="@+id/btnPlay"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="40dp"
@@ -86,6 +90,7 @@
             android:src="@drawable/ic_volume_mute" />
 
         <SeekBar
+            android:id="@+id/seekBarVolume"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
