--- a/app/src/main/res/menu/top_nav_menu.xml
+++ b/app/src/main/res/menu/top_nav_menu.xml
@@ -6,7 +6,8 @@
         android:id="@+id/search"
         android:icon="@drawable/ic_search"
         android:title="search"
-        app:showAsAction="always" />
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always|collapseActionView" />
 
     <item
         android:id="@+id/profile_pic"
