working on media player permissions

--- a/app/src/main/res/layout/activity_music_player_.xml
+++ b/app/src/main/res/layout/activity_music_player_.xml
@@ -11,19 +11,19 @@
     tools:context=".MusicPlayer_Activity">
 
     <TextView
+        android:id="@+id/songTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Someone like You"
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/songArtist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="adele"
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="18sp" />
