--- a/app/src/main/res/layout/fragment_writer.xml
+++ b/app/src/main/res/layout/fragment_writer.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/secondary"
-    tools:context=".BooksFragment">
+    tools:context=".fragments.books.BooksFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
