--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,14 @@
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.Book_List_Activity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        tools:context=".MainActivity">
+        tools:context=".activities.Book_List_Activity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/AppBarLayout"
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/secondary"
-            android:src="@drawable/ic_add"
+            app:srcCompat="@drawable/ic_add"
             app:layout_anchor="@id/bottomAppBar"
             app:maxImageSize="55dp"
             app:tint="@color/white" />
@@ -77,6 +77,7 @@
 
 
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/progress_text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
