--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#CC2936</color>
+    <color name="primary">#CA212E</color>
+<!--    <color name="primary">#CC2936</color>-->
     <color name="secondary">#0C6291</color>
 </resources>
