--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/secondary"
-    tools:context=".fragments.books.BooksFragment">
+    android:background="@color/primary"
+    tools:context=".fragments.music.MusicFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <ListView
-        android:id="@+id/lvSongs"
+        android:id="@+id/song_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
