Fixed splashscreen proportions and updated fragment background colors

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,5 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash"
-    tools:context=".activities.Splash" />
+    android:background="@drawable/splash_bg"
+    android:foregroundGravity="center"
+    tools:context=".activities.Splash" >
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/splash_fg"
+        android:contentDescription="@string/SplashScreen" />
+</androidx.constraintlayout.widget.ConstraintLayout>
