--- a/app/src/main/res/layout/fragment_writer.xml
+++ b/app/src/main/res/layout/fragment_writer.xml
@@ -5,6 +5,7 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".fragments.books.BooksFragment">
 
     <EditText
